--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -3,5 +3,15 @@ vich_uploader:
 
       mappings: 
           images:
-              uri_prefix: /images/busstation
-              upload_destination: '%kernel.project_dir%/public/images/busstation'
+              uri_prefix: /uploads/images
+              upload_destination: '%kernel.project_dir%/public/uploads/images'
+
+easy_admin:
+    entities:
+        Owner:
+            class: App\Entity\BusStation
+            form:
+                fields: [{ property: 'images', type: 'collection', type_options: { entry_type: 'App\Form\BusStationType' }}]
+            list:
+                fields: ['id','name']
+              
